# robotframework-heal

./: .gitignore  .gitpod.yml  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  tasks.py
.github/workflows/: ci.yml
docs/: features.md  index.md
features/: index.html
search/: search_index.json
src/SelfHealing/: SelfHealing.py  appium_healing.py  browser_healing.py  llm_client.py  template.html  utils.py  visual_healing.py
tests/atest/: ait_llm.robot  appium_saucedemo.robot  car_kw_driven.robot  insurance_broken_llm.robot  insurance_broken_parser.robot  run_keywork_tests.robot  sauce_web_llm.robot  sauce_web_parser.robot  the_internet_login_llm.robot  todo_broken_assertion.robot  todo_broken_llm.robot  todo_broken_parser.robot
tests/utest/: fuzztest.py  profiling.py  test_todo_app_with_parser.py  test_visual_llm.py
tests/utest/testdata/: todo_page_with_2_items.html
